ajout images ch.14 &16

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <div class="date">
                         <img class="left" src="Image.ch12-1.jpg" width="200" height="300" alt="Image" title="" align="right"/>
                         <h4></h4>
-                        <img class="left" src="Image.ch12-2.jpg" width="250" height="90" alt="Image" title="" align="right"/
+                        <img class="left" src="Image.ch12-2.jpg" width="250" height="90" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
@@ -253,13 +253,13 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <img class="left" src="Image.ch13.jpg" width="250" height="180" alt="Image" title="" align="left"/
+                        <img class="left" src="Image.ch13.jpg" width="250" height="180" alt="Image" title="" align="left"/>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre14" class="content">
                         <h3>Chapitre 14: Joysticks et ballons</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Enfance de l'auteur.</p>
                         <p><b>Références:</b><br> 
                             Gastaut (Yvan), Mourlane (Stéphane), sous la direction de, <i>Le Football dans nos sociétés. Une culture populaire, 1914-1998</i>, Paris, Autrement, 2006. <br>
                             Gentil (Philippe), "L'expérience de la mort virtuelle. Les jeux vidéos ou la fausse mort", <i>Etudes sur la mort</i>, n° 139, 2011/1, p.79-91. <br>
@@ -267,71 +267,75 @@
                             Ter Minassian (Hovig), "<i>Space invaders</i>: les pratiques des jeux vidéos dans les espaces domestiques", <i>Annales de géographie</i>, n°707, 2016/1, p.51-73. <br>
                         </p>
                         <p><b>Documents: </b>
+                            Dessin de bande dessinée. 
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch14.jpg" width="240" height="240" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre15" class="content">
                         <h3>Chapitre 15: Le grand lycée parisien</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 1984, entrée au lycée en section bilingue.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Baudelot (Christian), Establet (Roger), <i>L'Elitisme républicain. L'école française à l'épreuve des comparaisons internationales</i>, Paris, Seuil, La République des idées, 2009.<br>
+                            Bourdieu (Pierre), <i>Esquisse pour une auto-analyse</i>, Paris, Raisons d'agir, 2004. <br>
+                            Caspard (Pierre), Luc (Jean-Noël), Savoie (Philippe), <i>Lycées, lycéens, lycéennes, deux siècles d'histoire</i>, Lyon, INRP, 2005. <br>
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre16" class="content">
                         <h3>Chapitre 16: Naissance du bon élève</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 1985</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Baudelot (Christian), Establet (Roger), <i>L'Elitisme républicain. L'école française à l'épreuve des comparaisons internationales</i>, Paris, Seuil, La République des idées, 2009.<br>
+                            Bourdieu (Pierre), <i>Esquisse pour une auto-analyse</i>, Paris, Raisons d'agir, 2004. <br>
+                            Caspard (Pierre), Luc (Jean-Noël), Savoie (Philippe), <i>Lycées, lycéens, lycéennes, deux siècles d'histoire</i>, Lyon, INRP, 2005. <br>
                         </p>
                         <p><b>Documents: </b>
+                            Photo d'une plume à encre et d'un effaceur.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch16.jpg" width="200" height="330" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre17" class="content">
                         <h3>Chapitre 17: Lettre ouverte aux mufles</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 1985-1986</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre18" class="content">
                         <h3>Chapitre 18: La garçonnité à succès</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent, souvenirs.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Bozon (Michel), "Apparence physique et choix du conjoint", <i>in</i> Bozon (Michel), Héran (François), <i>La formation du couple. Textes essentiels pour la sociologie de la famille</i>, Paris, La Découverte, 2006, p. 99-122. <br>
+                            Gourarier (Mélanie), <i>Alpha Mâle. Séduire les femmes pour s'apprécier entre hommes</i>, Paris, Seuil, 2017.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
