ajout image ch19

--- a/index.html
+++ b/index.html
@@ -341,31 +341,32 @@
                 <li>
                     <div id="chapitre19" class="content">
                         <h3>Chapitre 19: Les soirées de Clamart</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Fin des années 80.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
+                            Extrait d'un agenda. 
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch19.jpg" width="300" height="120" alt="Image" title="" align="left"/>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre20" class="content">
                         <h3>Chapitre 20: Histoire de Partrick</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
+                            Témoignage de Patrick.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
