ajout image ch21

--- a/index.html
+++ b/index.html
@@ -372,16 +372,20 @@
                 <li>
                     <div id="chapitre21" class="content">
                         <h3>Chapitre 21: La masculinité de contrôle</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Adolescence de l'auteur</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                           Ben Lakhdar (Christian), <i>Addicts. Les drogues et nous</i>, Paris, Seuil, La République des idées, 2020. <br>
+                           Peretti-Wattel (Patrick), Moatti (Jean-Paul), <i>Le Principe de prévention. Le culte de la santé et ses dérives</i>, Paris, Seuil, La République des idées 2009. <br>
+                           Touiller-Feyrabend (Henriette), "Le dit sous interdits. L'expression publicitaire et la loi", <i>Ethnologie française</i>, vol. 36, 2006, p.55-63. <br>
+                           Tsikounas (Myriam), "Quand l'alcool fait sa pub. Les publicités en faveur de l'alcool dans la presse française, de la loi Roussel à la loi Evin (1873-1998)", <i>Le Temps des médias</i>, n°2, 2004, p.99-114. 
                         </p>
                         <p><b>Documents: </b>
+                            Affiche de prévention contre les abus d'alcool.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
+                        <img class="left" src="Image.ch21.jpg" width="200" height="210" alt="Image" title="" align="left"/>
                     </div>
                 </li>
                 <li>
