--- a/index.html
+++ b/index.html
@@ -155,9 +155,8 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <img class="left" src="Image.ch8-1.jpg" width="250" height="66" alt="Image" title="" align="right"/> <br>
-                        <h4></h4>
-                        <img class="left" src="Image.ch8-2.jpg" width="250" height="66" alt="Image" title="" align="right"/>
+                        <img class="left" src="Image.ch8-1.jpg" width="250" height="66" alt="Image" title="" align="right"/> 
+                        <img class="left" src="Image.ch8-2.jpg" width="250" height="66" alt="Image" title="" align="left"/>
                     </div>
 
                 </li>
@@ -234,9 +233,8 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <img class="left" src="Image.ch12-1.jpg" width="200" height="300" alt="Image" title="" align="right"/>
-                        <h4></h4>
-                        <img class="left" src="Image.ch12-2.jpg" width="250" height="90" alt="Image" title="" align="right"/>
+                        <img class="left" src="Image.ch12-1.jpg" width="200" height="300" alt="Image" title="" align="right"/> <br><br><br><br><br>
+                        <img class="left" src="Image.ch12-2.jpg" width="250" height="90" alt="Image" title="" align="left"/>
                     </div>
                 </li>
                 <li>
