--- a/index.html
+++ b/index.html
@@ -389,16 +389,19 @@
                 <li>
                     <div id="chapitre22" class="content">
                         <h3>Chapitre 22: Porno sans scénario</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Souvenirs de l'auteur.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            IFOP, "Les adolescent et le porno: vers une "génération Youporn"? Etude sur la consommation de pornographie chez les adolescents et son influence sur leurs comportements sexuels", 15 mars 2017. <br>
+                            INA, "Les jeunes et le sida", reportage, 1987. <br>
+                            Mathieu (Nicolas), "Je ne saurais pas raconter une adolescence sans le bédo", <i>Society</i>, 19 septembre 2019. <br>
+                            Mulvey (Laura), <i>Fétichisme et Curiosité</i>, Paris, Brook, 2019 (1996). <br>
+                            Richard (Claire), <i>Les chemins de désir</i>, Paris, Seuil, 2019. 
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents:</b> Tableau de classement bibliothèque
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
