ajout image ch24

--- a/index.html
+++ b/index.html
@@ -407,31 +407,32 @@
                 <li>
                     <div id="chapitre23" class="content">
                         <h3>Chapitre 23: Mot à mot, coeur à coeur</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent, souvenirs de 1989.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Guigue (Arnaud), "J'aime les filles qui ont des parents gentils", <i>in</i> Baecque (Antoine de), Guigue (Arnaud), sous la direction de, <i>Le Dictionnaire Truffaut</i>, Paris, La Martinière, 2004, p.212-213. <br>
+                            Rousseau (Jean-Jaques), <i>Rousseau juge de Jean-Jaques</i>, Paris, Classiques Garnier, 2019 (1972). <br>
+                            Starobinski (Jean), <i>Jean-Jaques Rousseau, la transparence et l'obstacle</i>, Paris, Gallimard, 1971. 
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents:</b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre24" class="content">
                         <h3>Chapitre 24: Des alexandrins comme de la musculation</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Différents souvenirs de l'enfance de l'auteur.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Signature de l'auteur qui date de son enfance. 
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
+                        <img class="left" src="Image.ch24.jpg" width="400" height="210" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
@@ -439,7 +440,7 @@
                         <h3>Chapitre 25: J'écris pour les filles de la cour de récré</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
                         </p>
