--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 <li>
                     <div id="chapitre25" class="content">
                         <h3>Chapitre 25: J'écris pour les filles de la cour de récré</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent.</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
@@ -447,22 +447,22 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre26" class="content">
                         <h3>Chapitre 26: La révolte Renaud, la morale Goldman</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Courant des années 80.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            "L'épopée Goldman", <i>L'Arche</i>, n°655, juillet-septembre 2015.<br>
+                            Conan (Eric), Rousso (Henry), <i>Vichy, un passé qui ne passe pas</i>, Paris, Fayard, 1994. <br>
+                            Vidal-Naquet (Pierre), <i>Les Assasins de la mémoire. "Un Eichmannde papier" et autres essais sur le révisionnisme</i>, Paris, La Découverte, 2005 (1987).
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
