--- a/index.html
+++ b/index.html
@@ -468,16 +468,15 @@
                 <li>
                     <div id="chapitre27" class="content">
                         <h3>Chapitre 27: Victoire du pitre</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 1990.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                           Yu (Junlin), McLellan (Ros), Winter (Liz), "Which Boys and Which Girls Are Falling Behind? Linking Adolescents' Gender Role Profiles to Motivation, Engagement and Achievment", <i>Journal of Youth and Adolescence</i>, juillet 2020.<br>
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Tableau de la <i>Bêtise de bronze</i>.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
