ajout image ch 28

--- a/index.html
+++ b/index.html
@@ -482,16 +482,17 @@
                 <li>
                     <div id="chapitre28" class="content">
                         <h3>Chapitre 28: En uniforme</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 1998, service militaire de l'auteur.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                           Proust (Jean-Marc), "À l'époque, on savait échapper au service militaire", <i>slate.fr</i>, 23 janvier 2018.<br>
+                           Roynette (Odile), <i>Bons pour le service. La caserne à la fin du XIXe siècle</i>, Paris, Belin, 2000.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Photo de l'auteur en uniforme.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
+                        <img class="left" src="Image.ch28.jpg" width="270" height="410" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
@@ -499,7 +500,7 @@
                         <h3>Chapitre 29: Histoire de Benoît</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
                         </p>
@@ -514,7 +515,7 @@
                         <h3>Chapitre 30: L'argent et les muscles</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
                         </p>
@@ -529,7 +530,7 @@
                         <h3>Chapitre 31: Désobéissance de genre</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
                         </p>
@@ -544,7 +545,7 @@
                         <h3>Chapitre 32: Les clématites</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
                         </p>
@@ -559,7 +560,7 @@
                         <h3>Chapitre 33: Un déjeuner avec Yann</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune.
                         </p>
                         <p><b>Documents: </b>
                         </p>
