--- a/index.html
+++ b/index.html
@@ -498,16 +498,15 @@
                 <li>
                     <div id="chapitre29" class="content">
                         <h3>Chapitre 29: Histoire de Benoît</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent, témoignage.</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Témoignage du père de Benoît. 
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
