--- a/index.html
+++ b/index.html
@@ -512,16 +512,15 @@
                 <li>
                     <div id="chapitre30" class="content">
                         <h3>Chapitre 30: L'argent et les muscles</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Début des années 2000.</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
