--- a/index.html
+++ b/index.html
@@ -526,16 +526,15 @@
                 <li>
                     <div id="chapitre31" class="content">
                         <h3>Chapitre 31: Désobéissance de genre</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 2002/2003</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
