--- a/index.html
+++ b/index.html
@@ -540,16 +540,15 @@
                 <li>
                     <div id="chapitre32" class="content">
                         <h3>Chapitre 32: Les clématites</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 2008/2009</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
