--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <li>
                     <div id="chapitre31" class="content">
                         <h3>Chapitre 31: Désobéissance de genre</h3>
-                        <p><b>Temporalité du chapitre:</b> 2002/2003</p>
+                        <p><b>Temporalité du chapitre:</b> 2002/2003.</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
@@ -540,7 +540,7 @@
                 <li>
                     <div id="chapitre32" class="content">
                         <h3>Chapitre 32: Les clématites</h3>
-                        <p><b>Temporalité du chapitre:</b> 2008/2009</p>
+                        <p><b>Temporalité du chapitre:</b> 2008/2009.</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
@@ -554,16 +554,15 @@
                 <li>
                     <div id="chapitre33" class="content">
                         <h3>Chapitre 33: Un déjeuner avec Yann</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 2012.</p>
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Lettre du père de Yann.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
