--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </li>
                 <li>
                     <div id="chapitre9" class="content">
-                        <h3>Chapitre 9: Délivrer Chloé</h3>
+                        <h3>Chapitre 9: Délivrer Cloé</h3>
                         <p><b>Temporalité du chapitre:</b> Début des années 80</p>
                         <p><b>Références:</b><br> 
                             Roland (Charlotte), <i>Du ghetto à l'Occident. Deux générations yiddishes en France</i>, Paris, Minuit, 1962. <br>
@@ -568,31 +568,32 @@
                 <li>
                     <div id="chapitre34" class="content">
                         <h3>Chapitre 34: L'âge d'homme</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Braudel (Fernand), "Histoire et sciences sociales: la longue durée", <i>Annales. Economies, sociétés, civilisations</i>, 13ème année, n°4, 1958, p.725-753.<br>
+                            Hirschman (Albert), <i>Défection et prise de parole. Théorie et applications</i>, Paris, Fayard, 1995 (1970). <br>
+                            Jaquet (Chantal), <i>Les Transclasses ou la non-reproduction</i>, Paris, PUF, 2014. <br>
+                            Leiris (Michel), <i>L'Âge d'homme</i>, Paris, Gallimard, 1939. 
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre35" class="content">
                         <h3>Chapitre 35: La "petite en violet"</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Aucune. 
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b>Témoignage de Cloé.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
