--- a/index.html
+++ b/index.html
@@ -601,14 +601,18 @@
                         <h3>Chapitre 36: Être avec elle</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Bantigny (Ludivine), <i>Le Plus Bel Âge? Jeunes et jeunesses en France de l'aube des Trente Glorieuses à la guerre d'Algérie</i>, Paris, Fayard, 2007.<br>
+                            Chauvel (Louis), <i>Le Destin des générations. Structure sociale et cohortes en France du XXe siècle aux années 2010</i>, Paris, PUF, 2010. <br>
+                            Heywood (Colin), <i>Growing Up in France: From the Ancien Régime to the Third Republic</i>, Cambridge, Cambridge University Press, 2007. <br>
+                            Mannheim (Karl), <i>Le Problème des générations</i>, Paris, Armand Colin, 2005 (1928). <br>
+                            Ulloa (Marie-Pierre), "Avoir 16 ans en France en 1989", <i>in</i> Potin (Yann), Sirinelli (Jean-François), sous la direction de, <i>Générations historiennes, XIXe-XXIe siècle</i>, Paris, CNRS, 2019, p.449-458. 
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Photo d'un souvenir d'enfance.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
+                        <img class="left" src="Image.ch36.jpg" width="410" height="410" alt="Image" title="" align="right"/>
                     </div>
                 </li>
             </ul>
