--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         <p><b>Références:</b><br> 
                             Aucune.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
