--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <li>
                     <div id="chapitre36" class="content">
                         <h3>Chapitre 36: Être avec elle</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent.</p>
                         <p><b>Références:</b><br> 
                             Bantigny (Ludivine), <i>Le Plus Bel Âge? Jeunes et jeunesses en France de l'aube des Trente Glorieuses à la guerre d'Algérie</i>, Paris, Fayard, 2007.<br>
                             Chauvel (Louis), <i>Le Destin des générations. Structure sociale et cohortes en France du XXe siècle aux années 2010</i>, Paris, PUF, 2010. <br>
