--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="point"></div>
                     
                     <div class="date">
-                        <img class="left" src="(./images/Image.ch2.png)" width="250" height="175" alt="Image" title="" align="right"/>
+                        <img class="left" src="image.ch2.png" width="250" height="175" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
